--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,6 +2,11 @@ version: 1.0.{build}
 image:
 - Ubuntu
 
+branches:
+  only:
+    # - main
+    - testing
+
 environment:
   global:
     USER: sumankhanal
